        - Fixed bug in CopyOnWriteArrayList emulation class causing
          the Client helper to not being created in compiled mode. 
          Reported by Guido Schmidt.
        - Added NPE check in ServerResource in getAvailableVariants().
          Reported by Bob Resendes.
        - Added NPE check in MapVerifier.getSecret().
          Reported by Carsten Lohmann.
     - Enhancements
        - Added support of the "xml:base" attibute when parsing Atom 
          Publishing documents.
        - Updated Grizzly to version 1.9.18b.
        - Updated FileUpload to version 1.2.1.
        - Updated JavaMail to version 1.4.2.
        - Updated JAXB RI to version 2.1.12.
        - Updated JSON library to version from 2009/08/16.
        - Updated Lucene to version 2.4.1.
        - Updated Tika to version 0.4.
        - Updated OAuth library to version from 2009/06/17.
        - Updated Velocity to version 1.6.2.
        - Updated JiBX to version 1.2.1.
        - Updated db4o to version 7.10.96.
        - Updated Jetty to version 7.0 RC4. Upgraded the Jetty
          extension: replaced "headerBufferSize" parameter by
          "requestHeaderSize" and "responseHeaderSize" parameters.
          Removed "lowThreads" parameter no longer available. 
        - Updated the Javadocs of the API to indicate the mapping 
          between properties/classes and HTTP headers.
        - Updated the "Server" HTTP header returned by default to 
          "Restlet-Framework/xxx"
        - The thread pool of Jetty servers can now be configured
          with Spring. Reported by Evgeny Shepelyuk. 
        - Added support for the "xsl" extension in MetadataService.
          Fixed potential NPE. Contributed by Fabian Mandelbaum.
          
- 2.0 Milestone 4 (2009-08-06)
    - Bugs fixed
        - Improved support for the RFC 3339 date format which was 
          limited due to SimpleDateFormat. Added InternetDateFormat.
          Based on a contribution from Frank Hellwig.